<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="23dp">

        <Button
            android:id="@+id/goMainBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="161dp"
            android:layout_marginTop="511dp"
            android:layout_marginEnd="162dp"
            android:layout_marginBottom="172dp"
            android:text="@string/goMaintext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/overViewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="156dp"
            android:layout_marginTop="86dp"
            android:layout_marginEnd="157dp"
            android:layout_marginBottom="465dp"
            android:text="@string/BMItext"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/goMainBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.333" />

        <TextView
            android:id="@+id/BMIText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BMITextView"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/statusText"
            app:layout_constraintEnd_toStartOf="@+id/BMIEditText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overViewText" />

        <TextView
            android:id="@+id/statusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statusTextView"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/energyText"
            app:layout_constraintEnd_toStartOf="@+id/statusEditText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BMIText" />

        <TextView
            android:id="@+id/energyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/energyTextView"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/goMainBtn"
            app:layout_constraintEnd_toStartOf="@+id/energyEditText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statusText" />

        <TextView
            android:id="@+id/BMIEditText"
            android:layout_width="159dp"
            android:layout_height="39dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/BMIText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/BMIText" />

        <TextView
            android:id="@+id/statusEditText"
            android:layout_width="118dp"
            android:layout_height="38dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/statusText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/statusText" />

        <TextView
            android:id="@+id/energyEditText"
            android:layout_width="139dp"
            android:layout_height="38dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/energyText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/energyText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>