<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtTitleInsertFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="133dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="134dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/txtTitleInsertFoodValue"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTitleInsertFood2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="42dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/txtInsertFoodNameValue"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitleInsertFood" />

        <TextView
            android:id="@+id/txtTitleInsertFood3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="42dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/txtKcal"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitleInsertFood2" />

        <EditText
            android:id="@+id/editTxtFoodName"
            android:layout_width="184dp"
            android:layout_height="50dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtTitleInsertFood2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtTitleInsertFood2" />

        <EditText
            android:id="@+id/editTextKcal"
            android:layout_width="151dp"
            android:layout_height="39dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtTitleInsertFood3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtTitleInsertFood3" />

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/saveBtnValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitleInsertFood3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>