<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/emo1" />

        <TextView
            android:id="@+id/txtEat1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/txtEat1Value"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/txtEat2"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/txtEat2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/txtEat2Value"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/txtEat3"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/txtEat1" />

        <TextView
            android:id="@+id/txtEat3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/txtEatValue"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/txtEat2" />

        <TextView
            android:id="@+id/txtCalOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/txtCalTwoValue"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtEat1"
            app:layout_constraintEnd_toStartOf="@+id/txtCalOne3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txtEat1" />

        <TextView
            android:id="@+id/txtCalOne3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/txtEatKcal"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"

            app:layout_constraintBaseline_toBaselineOf="@+id/txtCalOne"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txtCalOne" />

        <TextView
            android:id="@+id/txtCalOne4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/txtEatKcal"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"

            app:layout_constraintBaseline_toBaselineOf="@+id/txtCalTwo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txtCalTwo" />

        <TextView
            android:id="@+id/txtCalOne5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/txtEatKcal"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"

            app:layout_constraintBaseline_toBaselineOf="@+id/txtCalThree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txtCalThree" />

        <TextView
            android:id="@+id/txtCalTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/txtCalTwoValue"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"

            app:layout_constraintBaseline_toBaselineOf="@+id/txtEat2"
            app:layout_constraintEnd_toStartOf="@+id/txtCalOne4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txtEat2" />

        <TextView
            android:id="@+id/txtCalThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/txtCalTwoValue"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"

            app:layout_constraintBaseline_toBaselineOf="@+id/txtEat3"
            app:layout_constraintEnd_toStartOf="@+id/txtCalOne5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txtEat3" />

        <TextView
            android:id="@+id/txtEat4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/txtSubtitle"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ListView
            android:id="@+id/listView"
            android:layout_width="413dp"
            android:layout_height="518dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEat4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
